--- a/Responsive-Portfolio/assets/css/style.css
+++ b/Responsive-Portfolio/assets/css/style.css
@@ -7,11 +7,9 @@
 	background: #fff;
 	width:      960px;
 	margin:     0 auto;
-
 }
 h1, h2, h3, a{
-
-	font-family: 'Georgia', Times, Times New Roman, serif;
+font-family: 'Georgia', Times, Times New Roman, serif;
 }
 p{
 	margin-top:  0;
@@ -19,6 +17,7 @@ p{
     color:       #fff;
     font-size: 18px;
 }
+/* Header */
 #header{
 	background:    #fff;
 	height:        100px;
@@ -71,6 +70,8 @@ p{
     color: #777777;
 }
 
+
+/* Main page */
 #main-area{
 	background-image: url("../images/sneaker_mesh_fabric_@2X.png");
     width: 100%;
@@ -109,6 +110,8 @@ hr{
 	margin-top: 50px;
 	color:      #777;
 }
+
+/* Connect with Me (side bar)*/
 #connect-wrapper{
 	background: #fff;
 	width:      246px;
@@ -131,6 +134,8 @@ hr{
 #social-icon3 img{
 	margin:  5px 0 4px 3px;
 }
+
+/* Footer */
 #footer{
 	clear:      both;
 	background: #666;
@@ -140,6 +145,8 @@ hr{
 	padding:    10px 0 10px 0 ;
 	border-top: solid 5px #4aaaa5;
 }
+
+/* Contact page */
 input[type=text]{
     width:      100%;
     padding:    12px 20px;
@@ -173,6 +180,8 @@ textarea.textarea{
 	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
+/* Portfolio page */
+
 .photo {
   position: relative;
   width: 280px;
@@ -189,7 +198,7 @@ textarea.textarea{
   width: 100%;
   border: 0 none;
   margin-right: ;
-  opacity: .8;
+  opacity: ;
   float: left;
 }
 
@@ -199,47 +208,15 @@ textarea.textarea{
   margin-bottom: 0;
   padding: 15px 5px;
   width: 96%;
+  font-size: 25px;
   color: #fff;
   text-align: center;
   line-height: 30px;
-  font-weight: 300;
+  font-weight: ;
   background: #4aaaa5;
   border-bottom: 0;
 }
 
-/*.auth-image {
-  width: 150px;
-  height: auto;
-  margin-top: 10px;
-  margin-right: 25px;
-  float: left;
-}*/
-/*.photo{
-
-}
-.photo img{
-	width: 270px;
-	height: 220px; 
-	padding:	5px 20px 5px 10px;
-	float: left;
-	position: relative;
-	
-}
-
- .photo h3{
-	color:		#fff;
-	background:	#4aaaa5;
-	width: 90%;
-	height: 10px;
-	font-size: 20px;
-	bottom: 4px;
-	margin:		;
-	padding:10px;
-    position: absolute;
-	bottom:;
-	left:;
-	text-align: center;
-}*/
 
 @media screen and (max-width: 640px){
 	#wrapper{
@@ -301,6 +278,9 @@ textarea.textarea{
         margin-right: 30px;
         margin-top: 110px;
         overflow: auto;
+     }
+     .photo{
+      width: 550px;
      }
 
 }         
