--- a/Responsive-Portfolio/assets/css/style.css
+++ b/Responsive-Portfolio/assets/css/style.css
@@ -282,6 +282,75 @@ textarea.textarea{
      .photo{
       width: 550px;
      }
+}  
 
-}         
+@media screen and (min-width: 641px) and (max-width: 768px){ 
+    #wrapper{
+      width: 768px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    #header{
+      width: 768px;
+      height: 180px;
+      margin-left: auto;
+      margin-right: auto;
+      border-bottom-style: none;
+    }    
+    #name{
+      width: 768px;
+      float: none;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+    }
+    #navi-wrapper{
+      width: 768px;
+      height: 80px;
+      float: none;
+      background-color: white;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+    }
+    #main-area{
+      width: 768px;
+      margin-left: auto;
+      margin-right: auto;
+      clear: both;
+    }
+    /*.me-content img{
+      width: 500px;
+      height: 550px;
+      margin-left: 20px;
+     }*/
+
+    
+    /*.me-content p{
+      clear: both;
+      padding-top: 10px;
+     }*/
+
+     #connect-wrapper{
+      width: 768px;
+      margin-top: 30px;
+      clear: right;
+      float:left;
+     }
+     #connect-wrapper h2{
+      text-align: center;
+     }
+     #portfolio{
+      clear: both;
+        width: 768px;
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-top: 110px;
+        overflow: auto;
+     }
+     .photo{
+      width: 330px;
+     }
+}    
+
     	
