--- a/Responsive-Portfolio/assets/css/style.css
+++ b/Responsive-Portfolio/assets/css/style.css
@@ -72,19 +72,18 @@ p{
 
 
 /* Main page */
-#main-area{
-	background-image: url("../images/sneaker_mesh_fabric_@2X.png");
-    width: 100%;
-    overflow:         hidden;
-    padding-bottom:   60px;
-    border-top: 3px solid #ccc;
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
+#main-area-wrapper{
+  background-image: url("../images/sneaker_mesh_fabric_@2X.png");
+  width: 100%;
+  overflow:         hidden;
+  padding-bottom:   60px;
+  border-top: 3px solid #ccc;
+  margin-left: auto;
+  margin-right: auto;
 }
-aside{
-	background: #fff;
-	width:      606px;
+#main-area{
+	width: 606px;
+  background: #fff;
 	padding:    20px;
 	border:     2px solid #ddd;
 	float:      left;
@@ -93,7 +92,7 @@ aside{
 	left:       10px;
 	
 }
-aside h1{
+#main-area h1{
 	color:     #4aaaa5;
 	font-size: 25px;
 	font-weight: bold;
@@ -129,7 +128,7 @@ hr{
 #connect-wrapper h2{
 	font-size: 20px;
 	font-weight: bold;
-	margin: 22px 0 10px -50px;
+	margin: 22px 0 10px -0px;
 }
 #social-icon3 img{
 	margin:  5px 0 4px 3px;
@@ -207,7 +206,7 @@ textarea.textarea{
   bottom: 20px;
   margin-bottom: 0;
   padding: 15px 5px;
-  width: 96%;
+  width: 98%;
   font-size: 25px;
   color: #fff;
   text-align: center;
@@ -234,52 +233,60 @@ textarea.textarea{
     #name{
     	width: 100%;
     	float: none;
-    	margin-left: auto;
-        margin-right: auto;
-        text-align: center;
+    	margin-left: auto; 
+      margin-right: auto;
+      text-align: center;
     }
     #navi-wrapper{
-		width: 640px;
-        height: 80px;
-        float: none;
-        background-color: white;
-        margin-left: auto;
-        margin-right: auto;
-        text-align: center;
+	    width: 100%;
+      height: 80px;
+      float: none;
+      background-color: white;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
     }
-    #main-area{
+    #main-area-wrapper{
     	width: 640px;
-        margin-left: auto;
-        margin-right: auto;
-        clear: both;
+      margin-left: auto;
+      margin-right: auto;
+      clear: both;
+    }
+    aside{
+      width: 90%;
     }
      .me-content img{
      	width: 500px;
-        height: 550px;
-        margin-left: 20px;
+      height: 550px;
+      margin-left: 20px;
      }
      .me-content p{
      	clear: both;
      	padding-top: 10px;
      }
      #connect-wrapper{
-     	width: 640px;
+     	width: 94%;
      	margin-top: 30px;
+      margin-left: 20px;
      	clear: right;
      	float:left;
      }
      #connect-wrapper h2{
-     	text-align: center;
+     	text-align: left;
+      padding-left: 20px;
+     }
+     /* social-icon might need to do one by one */
+     #social-icon1, #social-icon2, #social-icon3{
+      float: left;
+      margin-left: 10px;
      }
      #portfolio{
-     	clear: both;
-        width: 640px;
-        margin-left: 30px;
-        margin-right: 30px;
-        margin-top: 110px;
-        overflow: auto;
+   	  clear: both;
+      width: 640px;
+      margin-top: 10px;
+      overflow: auto;
      }
-     .photo{
+     .photo{  
       width: 550px;
      }
 }  
@@ -292,65 +299,171 @@ textarea.textarea{
     }
     #header{
       width: 768px;
-      height: 180px;
+      height: 100px;
       margin-left: auto;
       margin-right: auto;
       border-bottom-style: none;
     }    
     #name{
-      width: 768px;
+      width: 230px;
       float: none;
-      margin-left: auto;
-      margin-right: auto;
+      position: relative;
+      bottom:        ;
+      left: 30px;
       text-align: center;
     }
     #navi-wrapper{
-      width: 768px;
-      height: 80px;
-      float: none;
+      width: 300px;
+      height: 100px;
+      float: right;
       background-color: white;
-      margin-left: auto;
-      margin-right: auto;
       text-align: center;
+      position: relative;
+      bottom: 5px;
+      right: 10px;
     }
-    #main-area{
+    #main-area-wraper{
       width: 768px;
+      clear: both;
       margin-left: auto;
       margin-right: auto;
-      clear: both;
     }
-    /*.me-content img{
-      width: 500px;
-      height: 550px;
+    #main-area h1{
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .me-content{
+      width: 100%;
+    }
+    .me-content img{
+      width: 200px;
+      height: 250px;
       margin-left: 20px;
-     }*/
-
-    
-    /*.me-content p{
-      clear: both;
-      padding-top: 10px;
-     }*/
-
+     }
+    .me-content p{
+      padding: 10px 0;
+     }
      #connect-wrapper{
-      width: 768px;
-      margin-top: 30px;
-      clear: right;
-      float:left;
+      width: 94%;
+      margin-top: 20px;
+      clear: both;
+      margin-left: auto;
+      margin-right: auto;
      }
      #connect-wrapper h2{
+      text-align: left;
+      padding-left: 20px;
+     }
+     /* social-icon might need to do one by one */
+     #social-icon1, #social-icon2, #social-icon3{
+      float: left;
+      margin-left: 10px;
+     }
+     #main-area{
+      clear: both;
+      width: 90%;
+      margin-top: 10px;
+      overflow: auto;
+     }
+     .photo{  
+      width: 300px;
+      padding-left: 5px;
+     }
+     .photo h3 {
+      width: 95%;
+    }
+  }
+@media screen and (min-width: 769px) and (max-width: 980px){ 
+    #wrapper{
+      width: 980px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    #header{
+      width: 980px;
+      height: 100px;
+      margin-left: auto;
+      margin-right: auto;
+      border-bottom-style: none;
+    }    
+    #name{
+      width: 230px;
+      float: none;
       text-align: center;
+    }
+    #navi-wrapper{
+      width: 300px;
+      height: 100px;
+      float: right;
+      background-color: white;
+      text-align: center;
+      position: relative;
+      bottom: 5px;
+      right: 60px;
+    }
+    #main-area-wrapper{
+      width: 980px;
+      overflow: auto;
+      margin-left: auto;
+      margin-right: 20px;
+      float: left;
+      clear: left;
+    }
+    #main-area{
+      width: 450px;
+      overflow: auto;
+      position:   relative;
+      left:      50px;
+    }
+    #main-area h1{
+      width: 420px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .me-content{
+      width: 100%;
+      margin-left: 10px;
+      padding-left: 
+    }
+    .me-content img{
+      width: 380px;
+      height: 450px;
+      padding-bottom: 20px;
+      margin-left: 20px;
+     }
+     #connect-wrapper{
+      width:      300px;
+      height:     180px;
+      padding:    10px;
+      float:      right;
+      position:   relative;
+      bottom:     -36px;
+      right:      50px;
+      text-align: center;
+}
+     #connect-wrapper h2{
+      text-align: left;
+      padding-left: 30px;
+     }
+     /* social-icon might need to do one by one */
+     #social-icon1, #social-icon2, #social-icon3{
+      float: left;
+      margin-left: 20px;
      }
      #portfolio{
       clear: both;
-        width: 768px;
-        margin-left: 30px;
-        margin-right: 30px;
-        margin-top: 110px;
-        overflow: auto;
+      width: 90%;
+      margin-top: 10px;
+      overflow: auto;
      }
-     .photo{
-      width: 330px;
+     .photo{  
+      width: 380px;
+      padding-left: 5px;
      }
+     .photo h3 {
+      width: 96%;
+    }    
 }    
 
     	
