--- a/Bootstrap-Portfolio/assets/css/style.css
+++ b/Bootstrap-Portfolio/assets/css/style.css
@@ -1,5 +1,5 @@
 body > .container {
-  padding: 60px 15px 0;
+  padding: 60px 15px 60px;
 }
 .container .text-muted {
   margin: 20px 0;
@@ -8,43 +8,66 @@ body > .container {
   padding-right: 15px;
   padding-left: 15px;
 }
-
 code {
   font-size: 80%;
 }
-h1, h2, h3, a{
-  margin-top:  0;
+
+h1{
   font-family: 'Georgia', Times, Times New Roman, serif;
 }
-p{
-  margin-top:  0;
-  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-  color:       #fff;
-}    
-.navbar-header{
-  background:    #4aaaa5;
-  width:         300px;
-  padding:       18px 25px 0;
-  color:         #ffffff;
-  font-size:     30px;
-  text-align:    center;
-  float:         left;
-  position:      relative;
-  left:          30px;
+
+/* I cannot erase this margin-bottom ask*/
+  margin-bottom: 0;
 }
-.navbar-right{
-  width:    400px;
-  float:    right;
-  position: relative;
-  bottom:   -12px;
-  right: 50px;
-  font-size: 20px;
+.navbar-default .navbar-brand {
+    color: #fff;
+    font-size: 30px;
+    text-align: center;
+    margin:0;
+    padding-top: 40px;
+    padding-bottom: 0;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+}
+.navbar-brand {
+    float: left;
+    position: relative;
+    left: 50px;
+    width: 300px;
+    height: 100px;
+    font-size: 18px;
+    background: #4aaaa5;
+
+  }
+.navbar-default .navbar-nav>li>a{
+    margin: 30px 15px 0 15px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 18px;
+}
+.page-header h1{
+    color: #4aaaa5;
+    font-size: 30px;
 }
 .main{
   background-image: url("../images/sneaker_mesh_fabric_@2X.png");
   width: 100%;
   overflow: hidden;
-  padding-bottom: 60px;
+  border-top: 4px solid #ddd;
+}
+
+
+
+
+
+/*.navbar-right{
+  width:    400px;
+  float:    right;
+  font-size: 15px;
+  padding-top: 5px;
+}
+.main{
+  background-image: url("../images/sneaker_mesh_fabric_@2X.png");
+  width: 100%;
+  overflow: hidden;
   border-top: 4px solid #ddd;
 }
 .page-header h1{
@@ -86,5 +109,5 @@ p{
 }
 .panel-body img{
   
-}
+} */
 
