--- a/Bootstrap-Portfolio/assets/css/style.css
+++ b/Bootstrap-Portfolio/assets/css/style.css
@@ -16,9 +16,6 @@ h1{
   font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
-/* I cannot erase this margin-bottom ask*/
-  margin-bottom: 0;
-}
 .navbar-default .navbar-brand {
     color: #fff;
     font-size: 30px;
@@ -36,8 +33,7 @@ h1{
     height: 100px;
     font-size: 18px;
     background: #4aaaa5;
-
-  }
+}
 .navbar-default .navbar-nav>li>a{
     margin: 30px 15px 0 15px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -53,61 +49,52 @@ h1{
   overflow: hidden;
   border-top: 4px solid #ddd;
 }
-
-
-
-
-
-/*.navbar-right{
-  width:    400px;
-  float:    right;
-  font-size: 15px;
-  padding-top: 5px;
-}
-.main{
-  background-image: url("../images/sneaker_mesh_fabric_@2X.png");
-  width: 100%;
-  overflow: hidden;
-  border-top: 4px solid #ddd;
-}
-.page-header h1{
-  color: #4aaaa5;
-  font-size: 30px;
-  margin-left: 30px;
-  padding: 0 0 0 5px;
-}
 .about-me-container{
-  width:      600px;
   background: #fff;
-  border:     2px solid #ddd;
-  float:      left;
-  position: relative;
-  left: 68px;
+  padding: 10px 20px;
+  border: 2px solid #ddd;
+  margin-bottom: 20px;
 }
-.about-me-container img{
-  margin-left: 30px;
+.header-image img{
+  padding:0;margin:0 15px 15px 0;
 }
-.about-me-container p{
-  color: #777;
-  font-size: 15px;
-  margin: 0 40px 20px 80px;
+.bio-container{
+  padding:0;margin: 15px 15px 15px 0;
 }
-.panel-default{
-  width: 270px;
-  height: 200px;
-  position: relative;
-  right: 100px;
-}
-.panel-default .panel-heading{
-  background: #fff;
-}
-.panel-heading h3{
+.connect-with-me-container h3{
+  font-family: 'Georgia', Times, Times New Roman, serif;
   color: #4aaaa5;
   font-size: 20px;
-  padding-top: 10px;
-  padding-bottom: 5px;
 }
-.panel-body img{
-  
-} */
-
+.panel-heading-continer{
+  background: #fff;
+}
+.btn-default {
+  color: #fff;
+  background-color: #4aaaa5;
+  border-color: #2e6da4;
+}
+.photo {
+  width:;
+  margin:   10px 42px 0 43px;
+  padding:  0;
+  float:      left;
+  position: relative;
+}
+ .text{
+  width:    97%;
+  font-size:  20px;
+  font-family: 'Georgia', Times, Times New Roman, serif;
+  bottom:   4px;
+  margin:   0;
+  padding:  5px 50px;
+  color:    #fff;
+  background: #4aaaa5;
+  position: absolute; 
+  bottom:     30px;
+  left:       4px;
+  text-align: center;
+}
+.photo img{
+  border:     4px solid #ddd;
+}
