--- a/Bootstrap-Portfolio/assets/css/style.css
+++ b/Bootstrap-Portfolio/assets/css/style.css
@@ -69,6 +69,22 @@ h1{
 .panel-heading-continer{
   background: #fff;
 }
+.hvr-grow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
+  -webkit-transform: scale(1.5);
+  transform: scale(1.5);
+}
+
 .btn-default {
   color: #fff;
   background-color: #4aaaa5;
@@ -80,7 +96,30 @@ h1{
   padding:  0;
   float:      left;
   position: relative;
+  width:300px; 
+  height:250px; 
+  /*border:1px solid #000; */
+  border-radius:4px; 
+  float:left; margin:20px 30px;  
 }
+.photo img{
+  width:300px; height:250px;
+}
+
+.photo .overlay:hover{
+  opacity:0.1; 
+  transition:all 0.5s 
+  ease-in-out; width:300px; 
+  margin-left:50px; 
+  float:right; 
+}
+.photo:hover{
+  box-shadow:0px 0px 10px #6A6A6A; 
+  border:1px solid #00DFDF;
+  transition:all 0.5s 
+  ease-in-out;
+}
+
  .text{
   width:    97%;
   font-size:  20px;
